--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^4.2.2",
     "@mantine/hooks": "^4.2.2",
     "@mantine/next": "^4.2.2",
+    "@next/bundle-analyzer": "^12.1.6",
     "mongodb": "^4.6.0",
     "next": "12.1.5",
     "react": "18.1.0",
