--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/bundle-analyzer": "^12.1.6",
     "mongodb": "^4.6.0",
     "next": "12.1.5",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "swr": "^1.3.0",
