--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "swr": "^1.3.0",
-    "tabler-icons-react": "^1.47.0"
+    "tabler-icons-react": "^1.47.0",
+    "vercel": "^24.2.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
