--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@mantine/core": "^4.2.2",
     "@mantine/hooks": "^4.2.2",
     "@mantine/next": "^4.2.2",
+    "@next-auth/mongodb-adapter": "^1.0.3",
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@next/bundle-analyzer": "^12.1.6",
+    "@prisma/client": "^3.14.0",
+    "bson": "^4.6.4",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
-    "next": "12.1.5",
+    "next": "^12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -26,6 +31,7 @@
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.8",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "prisma": "^3.14.0"
   }
 }
