--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^4.2.2",
-    "@mantine/hooks": "^4.2.2",
+    "@mantine/core": "^4.2.7",
+    "@mantine/hooks": "^4.2.7",
     "@mantine/next": "^4.2.2",
+    "@mantine/notifications": "^4.2.7",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@next/bundle-analyzer": "^12.1.6",
