--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/hooks": "^4.2.7",
     "@mantine/next": "^4.2.2",
     "@mantine/notifications": "^4.2.7",
+    "@mantine/ssr": "^4.2.7",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@next/bundle-analyzer": "^12.1.6",
@@ -24,6 +25,7 @@
     "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "tabler-icons-react": "^1.47.0",
     "vercel": "^24.2.4"
