--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@next/bundle-analyzer": "^12.1.6",
     "@prisma/client": "^3.14.0",
     "bson": "^4.6.4",
+    "cookies-next": "^2.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "next": "^12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-jss": "^10.9.0",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "tabler-icons-react": "^1.47.0",
@@ -32,7 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
-    "@types/react": "^18.0.8",
+    "@types/react": "^18.0.10",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "prisma": "^3.14.0"
