--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "@mantine/notifications": "4.2.2",
     "@mantine/prism": "4.2.2",
     "@modulz/radix-icons": "^4.0.0",
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@next/bundle-analyzer": "^12.1.4",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.0",
+    "mongodb": "^4.6.0",
     "next": "12.1.4",
+    "next-auth": "^4.3.4",
     "prism-react-renderer": "^1.3.1",
+    "prisma": "^3.14.0",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "tabler-icons-react": "^1.48.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
