--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@modulz/radix-icons": "^4.0.0",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@next/bundle-analyzer": "^12.1.4",
+    "@prisma/client": "^3.14.0",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.0",
     "mongodb": "^4.6.0",
