--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@next-auth/prisma-adapter": "^1.0.3",
     "@next/bundle-analyzer": "^12.1.4",
     "@prisma/client": "^3.14.0",
+    "@types/estree": "^0.0.51",
+    "@typescript-eslint/typescript-estree": "^5.27.0",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.0",
     "mongodb": "^4.6.0",
