--- a/package.json
+++ b/package.json
@@ -75,5 +75,17 @@
     "storybook-dark-mode": "^1.0.9",
     "ts-jest": "^27.1.4",
     "typescript": "4.6.3"
-  }
+  },
+  "description": "This is my rock cimbing app.\r The goal is for users to record, track, and evaluate their climbing progress.",
+  "main": ".prettierrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cturgeon/climbing-app-v2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/cturgeon/climbing-app-v2/issues"
+  },
+  "homepage": "https://github.com/cturgeon/climbing-app-v2#readme"
 }
