--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "typescript": "4.6.3"
   },
   "description": "This is my rock cimbing app.\r The goal is for users to record, track, and evaluate their climbing progress.",
-  "main": ".prettierrc.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cturgeon/climbing-app-v2.git"
