--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.0",
     "mongodb": "^4.6.0",
+    "@sentry/integrations": "^6.16.1",
+    "@sentry/nextjs": "^6.16.1",  
     "next": "12.1.4",
     "next-auth": "^4.3.4",
     "prism-react-renderer": "^1.3.1",
@@ -77,7 +79,6 @@
     "typescript": "4.6.3"
   },
   "description": "This is my rock cimbing app.\r The goal is for users to record, track, and evaluate their climbing progress.",
-  "main": ".prettierrc.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cturgeon/climbing-app-v2.git"
