--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next-auth": "^4.3.4",
     "prism-react-renderer": "^1.3.1",
     "react": "18.0.0",
+    "react-d3-components": "^0.9.1",
     "react-dom": "18.0.0",
     "tabler-icons-react": "^1.48.1"
   },
